--- a/Code/app/src/main/res/layout/activity_home.xml
+++ b/Code/app/src/main/res/layout/activity_home.xml
@@ -4,32 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F1ECEC"
+    android:backgroundTint="#EDA842"
     tools:context=".HomeActivity">
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="130dp"
         android:text="Bienvenue"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        android:textColor="@color/orange"
+        android:textColor="@color/brown"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="130dp"
         android:text="chez"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        android:textColor="@color/orange"
+        android:textColor="@color/brown"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
@@ -37,20 +40,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="180dp"
-        android:layout_marginEnd="130dp"
         android:text="Toua"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/brown"
         android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/entreesBtn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginTop="50dp"
         android:text="Entrées"
+        android:backgroundTint="@color/brown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,9 +63,11 @@
     <Button
         android:id="@+id/dessertsBtn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginTop="50dp"
         android:text="Desserts"
+        android:backgroundTint="@color/brown"
+        app:iconTint="#DACCCC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,13 +76,14 @@
     <Button
         android:id="@+id/platsBtn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="50dp"
+        android:backgroundTint="@color/brown"
         android:text="Plats"
         app:layout_constraintBottom_toTopOf="@+id/dessertsBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/entreesBtn" />
 
