--- a/Code/app/src/main/res/layout/recycler_raw.xml
+++ b/Code/app/src/main/res/layout/recycler_raw.xml
@@ -18,15 +18,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/dishPic"
         android:layout_width="113dp"
         android:layout_height="173dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="11dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="21dp"
+        app:layout_constraintEnd_toStartOf="@+id/entreeName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         tools:srcCompat="@drawable/chips" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
